# Mobile_Automation_with_Appium

./: .env.template  .gitignore  .gitlab-ci.yml  .runner_system_id  README.md  config.toml  conftest.py  load_env.ps1  pyproject.toml  pytest.ini
allure-report/: index.html
allure-results/: 0f22e05a-b265-4e10-b69a-a1abf408c89d-container.json  251c6111-f077-41f7-a576-63a238960590-container.json  284f1cc8-34b8-4807-b137-c3d597977ebc-container.json  2e9ed395-1f5f-4cf0-8a9e-8a54a0a30cc9-container.json  34826dcc-a465-4393-93ad-222c2893339c-container.json  3a681de3-c68c-40cb-ab3e-f0173059c209-container.json  3cde7c7e-a5fc-4312-8b58-0dd42f0aff94-container.json  5254d29e-f5f4-4ce1-bf2a-07e7bcc0bdf3-container.json  56ab7004-adbd-4f69-9b2b-74af96a625cd-container.json  69a09b68-fca7-42d9-83f2-3a66e1a33f48-container.json  77289962-941f-41a1-bfc3-673d1f0b0c7c-result.json  823092af-e031-4ee6-bb9e-2fc0da1e2599-container.json  85fa5251-a837-49d9-9b07-b8b00971dd2a-container.json  8c8cdf89-9885-4016-8fee-843776d0398b-result.json  991a918f-518d-4abd-a0ac-3ff0ab55d69d-result.json  a0dc0a94-f4ab-4931-ad6a-b761f9ab3561-container.json  a19eaa69-d698-4314-ad17-5d999ca5f536-container.json  aeb97fa9-9058-4060-b22f-38700c3b53a6-container.json  b0e7eb10-c55b-409c-911b-b233d9630373-container.json  b4b3a335-8a8d-4317-a050-4d12a9af1e41-container.json  b8a1b501-40db-40c1-b50b-8da20881ead7-container.json  bc63634b-c32d-47ef-9581-eb159fac3bcd-result.json  bd6a0911-3d7d-4b32-bbce-baab46dee4e9-container.json  c183e1f4-b89a-42c0-adcc-738cac2f7a4f-container.json  (+6 more)
configs/: caps.yaml
tests/: conftest.py  (+2 more)
(+110 files in other folders)
