[tool.poetry]
name = "easyfin-autotests-python"
version = "0.1.0"
description = "Professional Python UI & API Automation Framework"
authors = ["n.krotsik@andersenlab.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Core Testing Framework
pytest = "8.3.5"
pytest-xdist = "^3.5.0"
allure-pytest = "2.14.2"
# Mobile & Web Drivers
Appium-Python-Client = "^4.0.0"
playwright = "^1.40.0"
# Utilities & Data
PyYAML = "^6.0.1"
requests = "^2.31.0"
Faker = "37.3.0"
pytest-base-url = "2.1.0"
# Reporting & Coverage
pytest-cov = "6.0.0"
pytest-html = "4.1.1"
pytest-metadata = "3.1.1"
pytest-mock = "3.14.0"
anyio = "4.9.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"